# fitvibe

./: .env.docker.example  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
appV2/: .env.example  .gitignore  README.md  app.config.js  app.json  eas.json  package-lock.json  package.json
appV2/app/: _layout.tsx  ask.tsx  history.tsx  index.tsx  (+2 more)
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.html  PLAN.md  README.md  _tools_tmp.txt  docker-compose.yml  go.mod  go.sum
config/: .gitignore  README.md
deploy/: Caddyfile
design_handoff_fitvibe_app/: FitVibe App.html  FitVibe Onboarding.html  README.md
docs/: README.html  README.md  app.html  app.md  architecture.html  architecture.md  backend.html  backend.md  calculations.html  calculations.md  data-model.html  data-model.md  google-health-write-payloads.html  google-health-write-payloads.md  setup.html  setup.md  vaidya-research.html  vaidya-research.md  vaidya.html  vaidya.md
feature-image/: README.md  package-lock.json  package.json
vaidya-mcp/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
vaidya-mcp/sql/: role_provisioning.sql
vaidya-mcp/src/vaidya_mcp/: __init__.py  config.py  db.py  formatting.py  google.py  localdate.py  queries.py  server.py  sqltool.py
vaidya-mcp/tests/: test_sqltool.py  test_tools.py  test_writes.py
vaidya-service/: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  README.md  docker-entrypoint.sh  mcp.docker.json  package-lock.json  package.json  tsconfig.json
(+303 files in other folders)
