[project]
name = "vaidya-mcp"
version = "0.1.0"
description = "FitVibe Vaidya MCP server — read-only Postgres data tools + Google Health write tools for the AI coach"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.4",
    "psycopg[binary,pool]>=3.2",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vaidya_mcp"]
